# hello_world

./: CMakeLists.txt  README.md  package.xml
launch/: IoT_sensor.launch  cleaner_app.launch  some_sensor.launch  talker_listner.launch  temp_sensor.launch
msg/: IoTsensor.msg  temp_sensor.msg
src/perception/CVBridge/: CVBridge.py
src/perception/camera/: camera.py
src/perception/color_filtering/: color_filtering.py
src/perception/edge_detection/: edge_detection.py
src/perception/img_encoding/: img_encoding.py
src/perception/img_structure/: img_structure.py
src/perception/open_copy/: open_copy.py
src/perception/sqash_ball_detection/: squas_ball_camera.py  squash_ball_detection.py
src/perception/squash_ball_detection/: squash_ball_camera.py  squash_ball_detection.py
src/perception/thresholding/: thresholding.py
src/scripts/: data.py
src/scripts/IoT_sensor/: IoT_sensor_pub.py  IoT_sensor_sub.py
src/scripts/OOP/: oop_1.py  oop_2.py
src/scripts/add_service/: add_client.py  add_server.py
src/scripts/area_service/: area_client.py  area_server.py
src/scripts/coordinates_check/: coordinates_check_client.py  coordinates_check_server.py
src/scripts/data/: IMU_data.py  IMU_data_sub.py  data.py
src/scripts/power_service/: power_client.py  power_server.py
src/scripts/reach_goal_service/: reach_goal_client.py  reach_goal_server.py
src/scripts/some_sensor/: some_sensor_pub.py  some_sensor_sub.py
src/scripts/temp_sensor/: temp_sensor_pub.py  temp_sensor_sub.py
src/scripts/test/: test.py
src/scripts/turtle_motion/: motion_cleaner.py
srv/: Area.srv  coordinates_check.srv  power_service.srv  reach_goal.srv
